# openrover-urdf

./: .gitignore  LICENSE  README.md
config/: robot.rviz
launch/: view_robot.launch  view_robot.launch.py
modelv3/: open_rover.urdf
open_rover_model/: package.xml  setup.py
open_rover_model/launch/: view_robot.launch.py
open_rover_model/urdf/: robot.urdf
src/open_rover_model/: package.xml  setup.py
src/open_rover_model/launch/: view_robot.launch.py
src/open_rover_model/urdf/: open_rover.urdf  open_rover.xacro
